# os1

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  AGENTS.md  conftest.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/api/: __init__.py  alembic.ini  boot_settings.py  constants.py  e2b.py  exceptions.py  local_tasks.py  logging.py  main.py  open_webui.py  openapi.py  permissions.py  perplexity.py  runtime.py  searxng.py  taskiq.py  tasks.py  tavily.py  typeid.py
backend/api/alembic/: env.py
backend/api/alembic/versions/: 20251208_0520-81a0d8ef2ad9_add_provider_type_column.py  20251208_0526-1db9b6b7f242_add_missing_provider_columns.py
backend/api/core/: config.py  database.py  exceptions.py  logging.py  openapi.py  permissions.py  tasks.py
backend/api/database/: __init__.py  main.py  search.py
backend/api/database/search/: search_cursors.py
backend/api/mcp/: __init__.py  client.py  errors.py  types.py
backend/api/middleware/: __init__.py  _utils.py  api_version.py  exception_handler.py  rate_limit.py  request_id.py  request_logging.py  security_headers.py
backend/api/migrations/: alembic.ini  env.py
backend/api/migrations/versions/: 20251208_2102-c76fff12fadc_initial_migration.py  20260103_2216-874e516ae894_description.py  20260109_1200-7a1c0f1d2e3f_cascade_events_on_message_delete.py  20260110_1315-0b7c2d9f4a1e_add_model_adapter.py  20260110_1600-3c8a4e1d9b2f_message_tool_fields.py  20260117_0140-9b1f2c3d4e5a_add_settings_documents.py  20260124_0250-c7efe5c7b10d_refactor_reminders_add_reminder_lists.py  20260202_1301-e6a981c1b388_add_notes_table.py  20260205_0233-3c605a2dc2ec_add_access_rules_table.py  20260208_0222-4a9e3a556baf_access_rules_roles_overhaul.py  (+29 more)
backend/api/models/: __init__.py  access_rule.py  acl.py  agent.py  base.py  block.py  calendar.py  common.py  event.py  event_types.py  file.py  friendship.py  group.py  many_to_many.py  mcp.py  memory.py  message.py  mixins.py  model.py  note.py  notification.py  permissions.py  plugin.py  project.py  prompt.py  provider.py  reminder.py  role.py  setting.py  task.py  thread.py  thread_participant.py  thread_summary.py  user.py  user_client.py
backend/api/redis/: __init__.py  cache.py  cache_invalidation.py  client.py  pubsub.py
backend/api/routers/: __init__.py  system.py
backend/api/schemas/: __init__.py  access_rule.py  acl.py  agent.py  block.py  calendar.py  chat.py  citations.py  common.py  content.py  errors.py  event.py  file.py  friendship.py  group.py  mcp.py  memory.py  message.py  model.py  note.py  notification.py  plugin.py  preferences.py  privacy.py  project.py  prompt.py  provider.py  reminder.py  role.py  runs.py  scheduled_item.py  search.py  sorting.py  task.py  thread.py  thread_participant.py  typeid.py  user.py  user_client.py
backend/api/service/: __init__.py  pwa_manifest.py  web_assets.py
backend/api/settings/: __init__.py  database.py  settings.py
backend/api/storage/: __init__.py  base.py  local.py  s3.py
backend/api/stores/: __init__.py  message.py  thread.py
backend/api/tasks/: __init__.py  registry.py
backend/api/tests/: conftest.py  test_access_level_resolver.py  test_acl.py  test_agents.py  test_api_coverage.py  test_architecture_flow.py  test_attachment_decay.py  test_attachments_filter.py  test_auth.py  test_auth_refresh_cookie_coverage.py  test_auth_refresh_service_coverage.py  test_authorization.py  test_branching_chats.py  test_chat_message_references.py  test_chat_resource_tools.py  test_citation_index.py  test_clients.py  test_compaction_scenario.py  test_connection_manager_coverage.py  test_context_compaction.py  test_context_compaction_pipeline.py  test_context_windowing.py  test_core.py  test_core_exceptions_helpers_coverage.py  test_core_tasks.py  test_count_endpoints.py  test_coverage_gaps.py  test_delete_cascades.py  test_detached_runs_integration.py  test_ephemeral_runs.py  test_event_bus.py  test_events.py  test_events_stream_websocket_coverage.py  test_file_content_indexing.py  test_file_maintenance.py  test_files_upload.py  test_logging.py  test_main.py  test_mcp_flow.py  test_media_projection.py  (+48 more)
backend/api/v1/: app.py  router.py
backend/data/: .gitignore  README.md
backend/nokodo_ai/: README.md  __init__.py  adapter_enabled.py  agent.py  agents.py  audio_models.py  base.py  chat_models.py  chunkers.py  context.py  deltas.py  embeddings.py  exceptions.py  filters.py  hooks.py  image_models.py  llm.py  loaders.py  message.py  messages.py  thread.py  threads.py  token_estimation.py  tool.py  vectorstore.py  vectorstores.py  video_models.py
backend/nokodo_ai/adapters/: __init__.py  audio.py  base.py  chat.py  chunkers.py  embedding.py  embeddings.py  images.py  loaders.py  vectorstore.py  vectorstores.py  videos.py
backend/nokodo_ai/tests/: README.md  __init__.py  test_agent.py  test_api_exceptions_helpers.py  test_api_typeid_schema.py  test_concurrency.py  test_content_loaders_chunkers.py  test_embedding_token_counting.py  test_file_utils.py  test_google_generate_content.py  test_interfaces.py  test_message_thread.py  test_models_domain_extra.py  test_sdk_coverage_adapters.py  test_sdk_coverage_core.py  test_security.py  test_sse.py  test_tokens.py  test_tool.py  test_typeid.py  test_vectorstore.py
backend/nokodo_ai/types/: __init__.py  json.py
backend/nokodo_ai/utils/: __init__.py  concurrency.py  dicts.py  error_mapping.py  files.py  json_schema.py  provider_meta.py  search.py  security.py  sse.py  tokens.py  typeid.py  typing.py  validators.py  vectors.py
backend/project_slug/: README.md
backend/stubs/e2b_code_interpreter/: __init__.pyi
backend/tests/: README.md  live_progress.py  test_agentic_web_search_service.py  test_mcp_support.py  test_perplexity_client.py  test_poc_send_notification_cross_user.py  test_qdrant_vectorstore_integration.py  test_search_vector_specs.py  test_task_registry_import.py  test_web_search_perplexity.py  test_web_search_services.py
(+1234 files in other folders)
