[project]
name = "nokodo-ai"
version = "0.2.0-rc.0"
description = "Core library for nokodo AI"
requires-python = ">=3.13"
dependencies = [ # library-only dependencies
    "anthropic>=0.94.0",
    "google-genai>=1.72.0",
    "openai>=2.31.0",
    "pycrdt>=0.12.46",
    "pydantic[email]>=2.12.5",
    "qdrant-client>=1.12.0",
]

[project.optional-dependencies]
api = [
    # Extra deps needed to run the FastAPI app
    "e2b-code-interpreter>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.44.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "psycopg[binary]>=3.3.3",
    "python-multipart>=0.0.26",
    "authlib>=1.3.2",
    "argon2-cffi>=23.1.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
	"httpx>=0.27.2",
	"aiobotocore>=2.13.0",
]

dev = [
    "pytest>=8.3.3",
    "pytest-sugar>=1.1.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.2",
    "ruff>=0.15.10",
    "mypy>=1.13.0",
    "types-aiobotocore[s3]>=3.4.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nokodo_ai", "nokodo_ai.*"]
exclude = ["api", "api.*", "tests", "tests.*", "*.tests", "*.tests.*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
	"E",   # pycodestyle errors
	"F",   # pyflakes
	"I",   # isort (import sorting)
	"N",   # pep8-naming
	"W",   # pycodestyle warnings
	"UP",  # pyupgrade
]
ignore = [
    "W191",  # allow tabs for indentation
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.coverage.run]
source = ["api", "nokodo_ai"]
branch = true
concurrency = ["greenlet"]
data_file = "data/.coverage"
omit = [
    "*/tests/*",
    "tests/*",
    "api/tests/*",
]

[tool.coverage.html]
directory = "data/htmlcov"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
enable_incomplete_feature = ["TypeForm"]
mypy_path = "stubs"

[dependency-groups]
dev = [
    "types-authlib>=1.6.8.20260215",
]
