[project]
name = "nokodo-ai"
version = "1.0.0-rc.0"
description = "Core library for nokodo AI"
requires-python = ">=3.13"
dependencies = [ # library-only dependencies
    "anthropic>=0.98.1",
    "google-genai>=1.75.0",
    "openai>=2.34.0",
    "pycrdt>=0.12.46",
    "pydantic[email]>=2.13.3",
    "qdrant-client>=1.12.0",
]

[project.optional-dependencies]
api = [
    # Extra deps needed to run the FastAPI app
    "e2b-code-interpreter>=2.6.2",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "psycopg[binary]>=3.3.4",
    "python-multipart>=0.0.27",
    "joserfc>=1.6.4",
    "argon2-cffi>=23.1.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
    "httpx>=0.27.2",
    "aiobotocore>=3.6.0",
    "redis>=6.4.0",
    "taskiq>=0.12.3",
    "taskiq-redis>=1.2.2",
    "perplexityai>=0.32.1",
    "python-dateutil>=2.9.0.post0",
    "pywebpush>=2.3.0",
]

dev = [
    "pytest>=8.3.3",
    "pytest-sugar>=1.1.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.2",
    "ruff>=0.15.12",
    "types-python-dateutil>=2.9.0.20241206",
    "types-aiobotocore[s3]>=3.6.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nokodo_ai", "nokodo_ai.*"]
exclude = ["api", "api.*", "tests", "tests.*", "*.tests", "*.tests.*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
	"E",   # pycodestyle errors
	"F",   # pyflakes
	"I",   # isort (import sorting)
	"N",   # pep8-naming
	"W",   # pycodestyle warnings
	"UP",  # pyupgrade
]
ignore = [
    "W191",  # allow tabs for indentation
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.13"
extra-paths = ["stubs"]

[tool.ty.src]
exclude = [
    "api/tests",
    "nokodo_ai/tests",
    "tests",
]

[[tool.ty.overrides]]
include = ["nokodo_ai/utils/validators.py"]

[tool.ty.overrides.rules]
invalid-type-form = "ignore"

[tool.ty.terminal]
output-format = "concise"

[tool.coverage.run]
source = ["api", "nokodo_ai"]
branch = true
concurrency = ["greenlet"]
data_file = "data/.coverage"
omit = [
    "*/tests/*",
    "tests/*",
    "api/tests/*",
]

[tool.coverage.html]
directory = "data/htmlcov"

[dependency-groups]
dev = [
    "ty>=0.0.34",
]
