[project]
name = "nokodo-ai"
version = "1.0.0-rc.2"
description = "Core library for nokodo AI"
requires-python = ">=3.14"
dependencies = [ # library-only dependencies
    "anthropic>=0.109.1",
    "google-genai>=2.8.0",
    "markitdown[docx,pdf,pptx,xlsx]>=0.1.6",
    "openai>=2.41.1",
    "puremagic>=2.2.0",
    "pycrdt>=0.14.0",
    "pydantic[email]>=2.13.4",
    "qdrant-client>=1.18.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
api = [
    # Extra deps needed to run the FastAPI app
    "e2b-code-interpreter>=2.8.0",
    "fastapi>=0.137.0",
    "uvicorn[standard]>=0.49.0",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "alembic>=1.13.3",
    "psycopg[binary]>=3.3.4",
    "python-multipart>=0.0.32",
    "joserfc>=1.7.1",
    "argon2-cffi>=23.1.0",
    "python-dotenv>=1.0.1",
    "jinja2>=3.1.4",
    "httpx>=0.27.2",
    "mcp>=1.27.2",
    "aiobotocore>=3.7.0",
    "redis>=6.4.0",
    "taskiq>=0.12.4",
    "taskiq-redis>=1.2.2",
    "perplexityai>=0.38.0",
    "python-dateutil>=2.9.0.post0",
    "pywebpush>=2.3.0",
]

dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "rich>=15.0.0",
    "httpx>=0.27.2",
    "ruff>=0.15.17",
    "types-python-dateutil>=2.9.0.20260518",
    "types-aiobotocore[s3]>=3.7.0",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nokodo_ai", "nokodo_ai.*"]
exclude = ["api", "api.*", "tests", "tests.*", "*.tests", "*.tests.*"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
	"E",   # pycodestyle errors
	"F",   # pyflakes
	"I",   # isort (import sorting)
	"N",   # pep8-naming
	"W",   # pycodestyle warnings
	"UP",  # pyupgrade
]
ignore = [
    "W191",  # allow tabs for indentation
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.ty.environment]
python-version = "3.14"
extra-paths = ["stubs"]

[tool.ty.src]
exclude = [
    "api/tests",
    "nokodo_ai/tests",
    "tests",
]

[[tool.ty.overrides]]
include = ["nokodo_ai/utils/validators.py"]

[tool.ty.overrides.rules]
invalid-type-form = "ignore"

[tool.ty.terminal]
output-format = "concise"

[tool.coverage.run]
source = ["api", "nokodo_ai"]
branch = true
concurrency = ["greenlet"]
data_file = "data/.coverage"
omit = [
    "*/tests/*",
    "tests/*",
    "api/tests/*",
]

[tool.coverage.html]
directory = "data/htmlcov"

[dependency-groups]
dev = [
    "ty>=0.0.49",
]
